--- a/package.json
+++ b/package.json
@@ -9,6 +9,8 @@
     "lint": "next lint"
   },
   "dependencies": {
+    "@auth/prisma-adapter": "^1.0.4",
+    "@next-auth/prisma-adapter": "^0.4.4-canary.81",
     "@prisma/client": "^5.4.2",
     "@radix-ui/react-dialog": "^1.0.5",
     "@radix-ui/react-slot": "^1.0.2",
@@ -16,7 +18,7 @@
     "clsx": "^2.0.0",
     "lucide-react": "^0.288.0",
     "next": "13.5.6",
-    "prisma": "^5.4.2",
+    "next-auth": "^4.24.3",
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
@@ -32,6 +34,7 @@
     "postcss": "^8",
     "prettier": "^3.0.3",
     "prettier-plugin-tailwindcss": "^0.5.6",
+    "prisma": "^5.4.2",
     "tailwindcss": "^3",
     "typescript": "^5"
   }
