--- a/package.json
+++ b/package.json
@@ -8,6 +8,10 @@
     "start": "next start",
     "lint": "next lint"
   },
+
+  "prisma" : {
+    "seed": "ts-node prisma/seed.ts"
+  },
   "dependencies": {
     "@auth/prisma-adapter": "^1.0.4",
     "@next-auth/prisma-adapter": "^0.4.4-canary.81",
