--- a/package.json
+++ b/package.json
@@ -8,8 +8,7 @@
     "start": "next start",
     "lint": "next lint"
   },
-
-  "prisma" : {
+  "prisma": {
     "seed": "ts-node prisma/seed.ts"
   },
   "dependencies": {
@@ -28,7 +27,8 @@
     "react": "^18",
     "react-dom": "^18",
     "tailwind-merge": "^1.14.0",
-    "tailwindcss-animate": "^1.0.7"
+    "tailwindcss-animate": "^1.0.7",
+    "ts-node": "^10.9.1"
   },
   "devDependencies": {
     "@types/node": "^20",
